--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -16,7 +16,7 @@ gap: 15px;
 }
 
 .container .box.box1{
-background: url(yoku.png);
+background: url(yoku.jpg);
 background-size: cover;
 
 }
@@ -45,10 +45,13 @@ background-size: cover;
         display: flex;
         flex-direction: column;
         gap: 180px;
+       
     }
     .container .box{
         width: fit-content;
         height: 300px;
+        transition: ease-in-out 5s;
+        background-position: top;
     }
     .sub-container{
         width: fit-content;
@@ -59,5 +62,22 @@ background-size: cover;
         padding: 0;
         padding: 1px 4px;
       
+    }
+    
+.container .box.box1{
+    background: url(yoku.jpg);
+    background-size: cover;
+    
+    }
+    .container .box.box2{
+    background: url(toy.png);
+    background-size: cover;
+    }
+    .container .box.box3{
+    background: url(chef.png);
+    background-size: cover;
+    }
+    .container .box:hover{
+        background-position: bottom;
     }
 }
